force-app/main/default/objects/vlocity_cmt__VlocityAPIMetadata__c/fields/vlocity_cmt__IsActive__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>active batch cache rows</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>