force-app/main/default/objects/vlocity_cmt__VlocityAPIMetadata__c/fields/vlocity_cmt__LastCachedTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__LastCachedTime__c</fullName>
    <label>Last Cached Time</label>
    <type>DateTime</type>
</CustomField>