force-app/main/default/objects/vlocity_cmt__VlocityAPIMetadata__c/fields/vlocity_cmt__LastExpirationTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__LastExpirationTime__c</fullName>
    <label>Last Expiration Time</label>
    <type>DateTime</type>
</CustomField>